tests/error/type_match/tuple_auto.bz
function test()
{
	let _: auto = [ 1, {} ];
}
